--- a/vignettes/promises_07_combining.Rmd
+++ b/vignettes/promises_07_combining.Rmd
@@ -17,7 +17,7 @@ So far, all of our examples have involved chaining operations onto a single prom
 
 ## Gathering
 
-The most common pattern for combining promises is gathering, where you have two or more promises in hand and you want to use all of their results in a computation. The `promise_all` function is designed for this. Its signature looks like this:
+The most common pattern for combining promises is gathering, where you have two or more promises in hand and you want to use all of their results in a computation. The `promise_all` function is designed for this. Its signature looks like:
 
 ```r
 promise_all(..., .list = NULL)
@@ -34,14 +34,15 @@ library(mirai)
 a <- mirai(read.csv("a.csv"))
 b <- mirai(read.csv("b.csv"))
 
-result <- promise_all(a = a, b = b) %...>% {
-  rbind(.$a, .$b)
-}
+result <- promise_all(a = a, b = b) |>
+  then(\(values) {
+    rbind(values$a, values$b)
+  })
 ```
 
-In this example, the value of `.` within the curly braces is a list whose elements `a` and `b` are both data frames. We use `rbind` to combine them.
+In this example, the value of `values` within the curly braces is a list whose elements `a` and `b` are both data frames. We use `rbind` to combine them.
 
-The `.$` prefix is a bit inelegant, so we recommend the use of the base R function `with`, which lets you skip the prefix. Here's the same example, with `with`:
+The `values$` prefix is a bit inelegant, so we recommend the use of the base R function `with`, which lets you skip the prefix. Here's the same example, with `with`:
 
 ```r
 library(promises)
@@ -50,9 +51,11 @@ library(mirai)
 a <- mirai(read.csv("a.csv"))
 b <- mirai(read.csv("b.csv"))
 
-promise_all(a = a, b = b) %...>%
-  with({
-    rbind(a, b)
+promise_all(a = a, b = b) |>
+  then(\(values) {
+    with(values, {
+      rbind(a, b)
+    })
   })
 ```
 
@@ -60,7 +63,21 @@ promise_all(a = a, b = b) %...>%
 
 The combination of `promise_all` and `with` is a concise and powerful way to gather the results of multiple promises.
 
-`promise_all` also gives you two other options for passing input promises. First, if you would rather your result list be unnamed, you can pass in promises as unnamed arguments: `promise_all(a, b)` would yield `list(1, 2)`. Second, if you have a list of promises already in hand, you can pass the list as a single argument using `promise_all(.list = x)` (instead of, say, using `do.call(promise_all, x)`).
+`promise_all` also gives you two other options for passing input promises. First, if you would rather your result list be unnamed, you can pass in promises as unnamed arguments: `promise_all(a, b)` would yield `list(1, 2)`. Second, if you have a list of promises already in hand, you can pass the list as a single argument using `promise_all(.list = x)`(instead of, say, using `do.call(promise_all, x)`).
+
+```r
+proms <-
+  lapply(c(a = "a.csv", b = "b.csv"), \(file) {
+    mirai(read.csv(file))
+  })
+promise_all(.list = proms) |>
+  then(\(values) {
+    # values is a named list with elements a and b
+    with(values, {
+      rbind(a, b)
+    })
+  })
+```
 
 ## Nesting
 
@@ -72,12 +89,11 @@ library(mirai)
 
 a <- mirai(1)
 
-a %...>% (function(a) {
-  b <- mirai(2)
-  b %...>% (function(b) {
-    a + b
+a |>
+  then(\(a) {
+    b <- mirai(2)
+    b |> then(\(b) a + b)
   })
-})
 ```
 
 (We use anonymous functions here to mask the names of the original promises--i.e. once inside the first anonymous function, the symbol `a` now refers to the result of the promise `a`.)
@@ -112,7 +128,7 @@ In the example below, we iterate over a named vector of package names. For each 
 library(promises)
 library(mirai)
 
-get_pub_date <- function(pkg) {
+get_pub_date <- \(pkg) {
   desc_url <- paste0("https://cran.r-project.org/web/packages/", pkg, "/DESCRIPTION")
   mirai(
     {
@@ -127,7 +143,7 @@ packages <- setNames(, c("ggplot2", "dplyr", "knitr"))
 
 pkg_dates <- promise_map(packages, get_pub_date)
 
-pkg_dates %...>% print()
+pkg_dates |> then(print)
 ```
 
 The resulting output looks like this:
@@ -148,10 +164,10 @@ $knitr
 If you want behavior that's similar to `promise_map` but for all the async operations to occur in parallel, you can achieve that with a combination of a regular `purrr::map` and `promise_all`:
 
 ```r
-pkg_dates <- purrr::map(packages, get_pub_date) %>%
-  promise_all(.list = .)
+pkg_dates <- purrr::map(packages, get_pub_date) |>
+  promise_all(.list = _)
 
-pkg_dates %...>% print()
+pkg_dates |> then(print)
 ```
 
 ## Reducing
@@ -183,7 +199,7 @@ cran_mirrors <- c(
 
 promise_reduce(
   cran_mirrors,
-  function(result, mirror) {
+  \(result, mirror) {
     if (!is.null(result)) {
       result
     } else {
@@ -197,6 +213,6 @@ promise_reduce(
     }
   },
   .init = NULL
-) %...>%
-  print()
+) |>
+  then(print)
 ```
